examples/test/testpolicy6806.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6806
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key48: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value7
          key14: value45
      podSelector:
        matchLabels:
          key28: value26
          key26: value10
